Fix tertiary alignment

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -102,7 +102,6 @@
 
   &.btn--disabled {
     background: vars.$muted;
-    // border-color: vars.$muted;
     opacity: 0.65;
   }
 }
@@ -128,11 +127,8 @@
 
 .btn--tertiary {
   background: transparent;
-  border: none;
   color: vars.$accent;
-  font-weight: 500;
-  padding: vars.$space-xs vars.$space-sm;
-  min-height: 44px;
+  padding: vars.$space-sm vars.$space-xs;
 
   &:hover:not(:disabled) {
     color: vars.$accent-strong;
