--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -56,7 +56,7 @@
   &:disabled {
     color: vars.$bg;
     border-color: rgba(vars.$border, 0.6);
-    opacity: 0.6;
+    opacity: 0.65;
     cursor: not-allowed;
   }
 
